# wallbreaker-forked

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_ROADMAP.md  NOTICE  PLINY_PLAYBOOK.md  README.md  README_RICHERUI.md  config.example.toml  pyproject.toml  run_benchmark5.py  run_v4_sweep.py  universal_template.md  universal_volkov_v10.md  universal_volkov_v9.md
.github/workflows/: redteam-gate.example.yml
docs/: persona_spec.md
integrations/: wb-node-mcp.mjs
p4rs3lt0ngv3_mcp/: __init__.py  bridge.py  server.py
pliny_suite_mcp/: server.py
presets/: example.toml
rtharness/: cli.py  config.py  judging.py  presets.py  prompts.py  report.py
rtharness/providers/: anthropic_provider.py  image_provider.py  openai_provider.py
rtharness/tools/: __init__.py  agentharm.py  best_of_n.py  campaign.py  control.py  cot_forge.py  crescendo.py  diff_fire.py  harmbench_tool.py  image.py  indirect_inject.py  judge_selftest.py  l1b3rt4s.py  leak_scan.py  many_shot.py  mcp_bridge.py  memory_poison.py  optimize.py  prefill.py  registry.py  scan.py  seed_sweep.py  system_sweep.py  target.py  typographic.py
rtharness/transforms/: __init__.py  encodings.py
rtharness/tui/: app.py  header.py  sidebar.py  theme.py  widgets.py
tests/: _stub_mcp_server.py  test_adapt_seed.py  test_agent_loop.py  test_agent_profiles.py  test_agentic.py  test_audit_fixes.py  test_author_persona.py  test_bandit.py  test_baseline.py  test_best_of_n.py  test_cache.py  test_cipherchat.py  test_classifier_target.py  test_classify.py  test_claude_code.py  test_cli_one_shot.py  test_cluster.py  test_collection_crossprovider.py  test_command_quoting.py  test_complete_temperature.py  test_config.py  test_config_mcp.py  test_continue_target.py  test_conversation.py  test_cot_forge.py  test_crescendo.py  test_dashboard.py  test_datasets.py  test_drattack.py  test_echo.py  test_eni.py  test_evolve_persona.py  test_extra_features.py  test_file_tools.py  test_fingerprint.py  test_fire_file.py  test_fire_push.py  test_framing_sweep.py  test_gather_capped.py  test_gemlib.py  (+87 more)
wallbreaker/: agent_profiles.py  analyze.py  baseline.py  cache.py  classify.py  cli.py  config.py  harmbench.py  jailbreaks.py  judging.py  library.py  model_catalog.py  persona_method.py  persona_spec.py  persuasion_taxonomy.py  presets.py  prompts.py  provider_registry.py  regrade.py  report.py  session.py  state.py  strategy_lib.py  taxonomy.py  vault.py
wallbreaker/agent/: loop.py  messages.py
wallbreaker/dashboard/: server.py
wallbreaker/datasets/: __init__.py  _common.py  advbench.py  harmbench.py  jbb.py  strongreject.py
wallbreaker/providers/: anthropic_provider.py  base.py  factory.py  image_provider.py  openai_provider.py
wallbreaker/tools/: __init__.py  _bandit.py  _conversation.py  _echo.py  _util.py  adapt_seed.py  author_persona.py  barcode_tool.py  best_of_n.py  campaign.py  chat_template.py  cipherchat.py  cluster_findings.py  control.py  cot_forge.py  diff_fire.py  drattack.py  eni.py  evolve_persona.py  files.py  fingerprint_defense.py  fire_file.py  framing_sweep.py  gemlib.py  goat.py  harmbench_tool.py  http_tool.py  ica.py  image.py  indirect_inject.py  judge.py  judge_selftest.py  l1b3rt4s.py  leaderboard.py  many_shot.py  mcp_bridge.py  mutate.py  (+32 more)
(+39 files in other folders)
