[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wallbreaker"
version = "0.1.0"
description = "Wallbreaker — a Claude-Code-style terminal agent built for red-teaming LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "textual>=0.79",
    "rich>=13.7",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
barcodes = [
    "qrcode[pil]>=7.4",
    "python-barcode>=0.15",
    "pillow>=10.0",
]
stego = [
    "stegg[crypto]>=3.0",
]

[project.scripts]
wallbreaker = "wallbreaker.cli:main"
wb = "wallbreaker.cli:main"
p4rs3lt0ngv3-mcp = "p4rs3lt0ngv3_mcp.server:main"

[tool.setuptools.packages.find]
include = ["wallbreaker*", "p4rs3lt0ngv3_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
